--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "date-range-picker",
   "version": "0.0.1",
+  "keywords": ["angular", "date", "range", "picker"],
+  "description": "Angular Date Range Picker",
+  "author": {
+    "name": "Jordão Nhanga de Oliveira",
+    "email": "jordaonhanga7@gmail.com",
+    "linkedin": "https://www.linkedin.com/in/jordao-de-oliveira/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JordaoNhanga15/angular-date-range-picker"
+  },
   "peerDependencies": {
     "@angular/common": "^12.1.0",
     "@angular/core": "^12.1.0"
