--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -13,8 +13,11 @@
       "dom",
       "es2018"
     ],
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
+    "strictPropertyInitialization": false,
+  },
+  "angularCompilerOptions": {
+    "enableIvy": true,
+    "resolveJsonModule": false,
   },
   "exclude": [
     "src/test.ts",
