fix: clear year list

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": {
     "name": "Jordão Nhanga de Oliveira",
     "email": "jordaonhanga7@gmail.com",
-    "linkedin": "https://www.linkedin.com/in/jordao-de-oliveira/"
+    "linkedin": "https://www.linkedin.com/in/jordao-de-oliveira/",
+    "github": "https://github.com/JordaoNhanga15"
   },
   "repository": {
     "type": "git",
